# fast-prime-rs

./: .gitignore  Cargo.toml
benches/: prime_bench.rs
examples/: simple_test.rs
src/: lib.rs  miller_rabin.rs  strong_lucas.rs
